--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- TITLE -->
 
     <!-- TITLE ICON -->
-    <link rel="icon" href="images/BriTTing LOGO.png" type="image/icon type">
+    <link rel="icon" href="BriTTing LOGO.png" type="image/icon type">
     <!-- TITLE ICON -->
 
   </head>
@@ -32,7 +32,7 @@
       <div class="homePg">
         <div class="navbar">
           <a href="index.html">
-            <img src="images/BriTTing LOGO.png" class="logo" alt="BriTTing">
+            <img src="BriTTing LOGO.png" class="logo" alt="BriTTing">
           </a>
           <nav>
               <ul>
@@ -51,7 +51,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="images/tradingpic.png" alt="" width="600px" style="padding-left: 200px;">
+              <img src="tradingpic.png" alt="" width="600px" style="padding-left: 200px;">
             </div>
           </div>
         </div>
